--- a/package.json
+++ b/package.json
@@ -4,13 +4,23 @@
   "main": "index.js",
   "author": "Gal Schlezinger",
   "license": "MIT",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build"
+  },
   "dependencies": {
     "axios": "^0.20.0",
+    "next": "^9.5.5",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "unzipper": "^0.10.11"
   },
   "devDependencies": {
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
     "@types/unzipper": "^0.10.3",
     "@vercel/node": "^1.8.4",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.3",
     "vercel": "^20.1.2"
   }
