--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "heroicons": "^0.4.2",
     "next": "^9.5.5",
+    "next-transpile-modules": "^4.1.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "unzipper": "^0.10.11"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^3.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/unzipper": "^0.10.3",
     "@vercel/node": "^1.8.4",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.1.2",
+    "tailwindcss": "^1.9.5",
     "typescript": "^4.0.3",
     "vercel": "^20.1.2"
   }
