--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "cssnano": "^4.1.10",
     "heroicons": "^0.4.2",
     "next": "^9.5.5",
     "next-transpile-modules": "^4.1.0",
@@ -18,7 +19,6 @@
     "unzipper": "^0.10.11"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^3.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/unzipper": "^0.10.3",
