--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.20.0",
     "cssnano": "^4.1.10",
     "heroicons": "^0.4.2",
+    "jszip": "^3.5.0",
     "next": "^9.5.5",
     "next-transpile-modules": "^4.1.0",
     "react": "^16.14.0",
